rename importing modules with names of the modules to clarify

--- a/Functions in Python/3_Gaining a Deeper Understanding of Python Functions/04_ImportingModules_math_OS.ipynb
+++ b/Functions in Python/3_Gaining a Deeper Understanding of Python Functions/04_ImportingModules_math_OS.ipynb
@@ -213,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Math module\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -299,6 +306,13 @@
    ],
    "source": [
     "math.factorial(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Os module"
    ]
   },
   {
@@ -1116,7 +1130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
