--- a/Appdatabase project/01_Get_tickers_from_url.ipynb
+++ b/Appdatabase project/01_Get_tickers_from_url.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,7 @@
     "            wikitable_dict[key] = data.strip()\n",
     "        wikitable_dict['market'] = wiki_metadata['market']\n",
     "        wikitable_dict['active_type'] = 'stock'\n",
+    "        wikitable_dict['active_flag'] = True\n",
     "        wikitable_data.append(wikitable_dict)\n",
     "    wikitable_data.append({'ticker':wiki_metadata['market'] ,'market':wiki_metadata['market'], 'active_type':'ETF'})\n",
     "    return wikitable_data"
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,249 +115,284 @@
        "  'entry_date': '2015',\n",
        "  'ISIN': 'ES0125220311',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ACX',\n",
        "  'company': 'Acerinox',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
        "  'entry_date': '2015',\n",
        "  'ISIN': 'ES0132105018',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ACS',\n",
        "  'company': 'Grupo ACS',\n",
        "  'sector': 'Construcción',\n",
        "  'entry_date': '1998',\n",
        "  'ISIN': 'ES0167050915',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'AENA',\n",
        "  'company': 'Aena',\n",
        "  'sector': 'Transporte y distribución',\n",
        "  'entry_date': '2015',\n",
        "  'ISIN': 'ES0105046009',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ALM',\n",
        "  'company': 'Almirall',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
        "  'entry_date': '2020',\n",
        "  'ISIN': 'ES0157097017',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'AMS',\n",
        "  'company': 'Amadeus IT Group',\n",
        "  'sector': 'Electrónica y software',\n",
        "  'entry_date': '2011',\n",
        "  'ISIN': 'ES0109067019',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'MTS',\n",
        "  'company': 'ArcelorMittal',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
        "  'entry_date': '2009',\n",
        "  'ISIN': 'LU1598757687',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'SAB',\n",
        "  'company': 'Banco Sabadell',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '2004',\n",
        "  'ISIN': 'ES0113860A34',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'SAN',\n",
        "  'company': 'Banco Santander',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0113900J37',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'BKIA',\n",
        "  'company': 'Bankia',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '2011',\n",
        "  'ISIN': 'ES0113307062',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'BKT',\n",
        "  'company': 'Bankinter',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0113679I37',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'BBVA',\n",
        "  'company': 'BBVA',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0113211835',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'CABK',\n",
        "  'company': 'CaixaBank',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
        "  'entry_date': '2009',\n",
        "  'ISIN': 'ES0140609019',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'CLNX',\n",
        "  'company': 'Cellnex Telecom',\n",
        "  'sector': 'Telecomunicaciones y otros',\n",
        "  'entry_date': '2016',\n",
        "  'ISIN': 'ES0105066007',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'CIE',\n",
        "  'company': 'CIE Automotive',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
        "  'entry_date': '2018',\n",
        "  'ISIN': 'ES0105630315',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ENG',\n",
        "  'company': 'Enagás',\n",
        "  'sector': 'Electricidad y gas',\n",
        "  'entry_date': '2003',\n",
        "  'ISIN': 'ES0130960018',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ELE',\n",
        "  'company': 'Endesa',\n",
        "  'sector': 'Electricidad y gas',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0130670112',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'FER',\n",
        "  'company': 'Ferrovial',\n",
        "  'sector': 'Construcción',\n",
        "  'entry_date': '1999',\n",
        "  'ISIN': 'ES0118900010',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'GRF',\n",
        "  'company': 'Grifols',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
        "  'entry_date': '2008',\n",
        "  'ISIN': 'ES0171996087',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'IAG',\n",
        "  'company': 'IAG',\n",
        "  'sector': 'Transporte y distribución',\n",
        "  'entry_date': '2011',\n",
        "  'ISIN': 'ES0177542018',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'IBE',\n",
        "  'company': 'Iberdrola',\n",
        "  'sector': 'Electricidad y gas',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0144580Y14',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'ITX',\n",
        "  'company': 'Inditex',\n",
        "  'sector': 'Textil, vestido y calzado',\n",
        "  'entry_date': '2001',\n",
        "  'ISIN': 'ES0148396007',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'IDR',\n",
        "  'company': 'Indra Sistemas',\n",
        "  'sector': 'Electrónica y software',\n",
        "  'entry_date': '1999',\n",
        "  'ISIN': 'ES0118594417',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'COL',\n",
        "  'company': 'Inmobiliaria Colonial',\n",
        "  'sector': 'SOCIMI',\n",
        "  'entry_date': '2007',\n",
        "  'ISIN': 'ES0139140174',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'MAP',\n",
        "  'company': 'Mapfre',\n",
        "  'sector': 'Seguros',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0124244E34',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'MEL',\n",
        "  'company': 'Meliá Hotels International',\n",
        "  'sector': 'Ocio, turismo y hostelería',\n",
        "  'entry_date': '2016',\n",
        "  'ISIN': 'ES0176252718',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'MRL',\n",
        "  'company': 'Merlin Properties',\n",
        "  'sector': 'SOCIMI',\n",
        "  'entry_date': '2015',\n",
        "  'ISIN': 'ES0105025003',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'NTGY',\n",
        "  'company': 'Naturgy',\n",
        "  'sector': 'Electricidad y gas',\n",
        "  'entry_date': '2018',\n",
        "  'ISIN': 'ES0116870314',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'PHM',\n",
        "  'company': 'PharmaMar',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
        "  'entry_date': '2020',\n",
        "  'ISIN': 'ES0169501022',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'REE',\n",
        "  'company': 'Red Eléctrica Corporación',\n",
        "  'sector': 'Electricidad y gas',\n",
        "  'entry_date': '2000',\n",
        "  'ISIN': 'ES0173093024',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'REP',\n",
        "  'company': 'Repsol',\n",
        "  'sector': 'Petróleo',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0173516115',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'SGRE',\n",
        "  'company': 'Siemens Gamesa Renewable Energy',\n",
        "  'sector': 'Fabricación y montaje de bienes de equipo',\n",
        "  'entry_date': '2017',\n",
        "  'ISIN': 'ES0143416115',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'SLR',\n",
        "  'company': 'Solaria Energía y Medio Ambiente',\n",
        "  'sector': 'Energías renovables',\n",
        "  'entry_date': '2020',\n",
        "  'ISIN': 'ES0165386014',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'TEF',\n",
        "  'company': 'Telefónica',\n",
        "  'sector': 'Telecomunicaciones y otros',\n",
        "  'entry_date': '1992',\n",
        "  'ISIN': 'ES0178430E18',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'VIS',\n",
        "  'company': 'Viscofan',\n",
        "  'sector': 'Alimentación y bebidas',\n",
        "  'entry_date': '2016',\n",
        "  'ISIN': 'ES0184262212',\n",
        "  'market': 'IBEX35',\n",
-       "  'active_type': 'stock'},\n",
+       "  'active_type': 'stock',\n",
+       "  'Active': True},\n",
        " {'ticker': 'IBEX35', 'market': 'IBEX35', 'active_type': 'ETF'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10142,7 +10178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
