--- a/Appdatabase project/03_Housekeeper_class.ipynb
+++ b/Appdatabase project/03_Housekeeper_class.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Minimum code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -113,12 +120,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing module"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inputs\n",
+    "# Config parameters to save\n",
     "dir_list = ['Data', 'Tickers']\n",
     "upper_stages = 0\n",
     "file_name = 'tickers.json'\n",
