--- a/Appdatabase project/10-AppdatabaseModule.ipynb
+++ b/Appdatabase project/10-AppdatabaseModule.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABC, abstractmethod\n",
+    "from datetime import datetime\n",
     "\n",
     "class TickerManager(ABC):\n",
     "\n",
@@ -214,6 +215,7 @@
     "        self.__tickers_list = tickers_list # Lista de diccionarios. Ej:\n",
     "        # [{ \"ticker\":\"BBVA(raw)\", \"market\":\"IBEX35\", \"hora\":\"YYYY/MM/DD/HH/MM/SS\", \"source\":\"Wikipedia\", \"tickerYahoofinance\":\"BBVA.MC\", \"tickerAlphaVantage\":\"BBVA.BM(inventado)\"}]\n",
     "        self.__update_date = [] #FIX, eliminar, esta variable está incluida en el diccionario\n",
+    "        self.__tickers_config = []\n",
     "    \n",
     "    @abstractmethod\n",
     "    def get_raw_tickers(self):\n",
@@ -236,7 +238,17 @@
     "        # Devuelve la lista tickers_list\n",
     "        print('Getting tickers_list')\n",
     "        return self.__tickers_list\n",
-    "     \n",
+    "    \n",
+    "    def set_tickers_config(self, tickers_config):\n",
+    "        # Sobreescribe la lista tickers_config\n",
+    "        print(\"Set tickers_config\")\n",
+    "        self.__tickers_config = tickers_config\n",
+    "    \n",
+    "    def get_tickers_config(self):\n",
+    "        # Devuelve la lista tickers_config\n",
+    "        print('Getting tickers_config')\n",
+    "        return self.__tickers_config\n",
+    "    \n",
     "    def get_num_tickers(self):\n",
     "        # Devuelve el número de diccionarios(uno por cada ticker) en la tickers_list\n",
     "        print(\"Number of tickers: {}\".format(len(self.__tickers_list)))\n",
@@ -263,21 +275,35 @@
     "    \n",
     "    def save_tickers_list(self):\n",
     "        # Guarda la ticker list. Guarda en JSON.\n",
-    "        dir_list = ['Data', 'Tickers']\n",
+    "        dir_list = ['Data']\n",
     "        #dir_list = True\n",
     "        upper_stages = 0\n",
-    "        file_name = 'tickers.json'\n",
-    "        #dictionary_list = ['hola', 'mundo','google']\n",
-    "        #dictionary_list = [{'key1':'value1'}, {'key2':'value2'}]\n",
-    "        #data_housekeeper.list_dictionary_to_json(dir_list,file_name, self.get_tickers_list())\n",
+    "        file_name = 'tickers_list.json'\n",
     "        data_housekeeper.list_dict_to_json(dir_list,upper_stages,file_name,self.get_tickers_list())\n",
     "        print(\"Save tickers list\")\n",
+    "    \n",
+    "    def save_tickers_config(self):\n",
+    "        now = datetime.now()\n",
+    "        ticker_list_metadata_ = [{\"timestamp\":now.strftime(\"%d/%m/%Y %H:%M:%S\")}]\n",
+    "        self.set_tickers_config(ticker_list_metadata_ + self.get_tickers_list())\n",
+    "        # Config parameters to save\n",
+    "        dir_list = ['Data'], upper_stages = 0\n",
+    "        file_name = 'tickers_config.json'\n",
+    "        data_housekeeper.list_dict_to_json(dir_list,upper_stages,file_name,self.get_tickers_config())\n",
+    "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +406,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -388,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6972,7 +7012,7 @@
        "  'feeds': {'name': 'YahooFinance', 'ticker': '^GSPC'}}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6983,7 +7023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -6993,15 +7033,40 @@
       "Getting tickers_list\n",
       "Root dir:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
       "dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
-      "dir_list:  ['Data', 'Tickers']\n",
-      "nested_path:  /Data/Tickers/\n",
-      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/Tickers/tickers.json\n",
+      "dir_list:  ['Data']\n",
+      "nested_path:  /Data/\n",
+      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/tickers_list.json\n",
       "Save tickers list\n"
      ]
     }
    ],
    "source": [
     "tickerMan.save_tickers_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tickers_list\n",
+      "Set tickers_config\n",
+      "Getting tickers_config\n",
+      "Root dir:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
+      "Creating dir:  ./Data\n",
+      "dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
+      "dir_list:  ['Data']\n",
+      "nested_path:  /Data/\n",
+      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/tickers_config.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "tickerMan.save_tickers_config()"
    ]
   },
   {
