--- a/Appdatabase project/03_Housekeeper_class.ipynb
+++ b/Appdatabase project/03_Housekeeper_class.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,19 @@
     "            print('No dir deleted: ')        \n",
     "\n",
     "    @staticmethod\n",
-    "    def create_my_path(dir_path):\n",
-    "        myPath = '.'\n",
-    "        for directory in dir_path:\n",
-    "                myPath += '/' +  directory\n",
-    "        return myPath\n",
-    "            \n",
+    "    def create_nested_dir_path(dir_list):\n",
+    "        nested_path = '/' + '/'.join(dir_list)\n",
+    "        return nested_path\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def create_file_path_in_nested_dir(dir_list, file_name):\n",
+    "        nested_dir_path_ = data_housekeeper.create_nested_dir_path(dir_list)\n",
+    "        print('nested_dir_path: ', nested_dir_path_)\n",
+    "        file_path_in_nested_dir_ = nested_dir_path_ + '/' + file_name\n",
+    "        return file_path_in_nested_dir_\n",
+    "    \n",
+    "\n",
     "    @staticmethod\n",
     "    def create_nested_dir(dir_path):\n",
     "        try:\n",
@@ -96,27 +103,29 @@
     "            print('Error: No directory created. Posible causes: \\nWrong type imput arguments \\nUnable to access to nested dir')\n",
     "            return os.getcwds()\n",
     "                \n",
+    "    \n",
+    "    \n",
     "    @staticmethod\n",
     "    def list_dict_to_json(dir_list,upper_stages,file_name, dictionary_list):\n",
-    "        dir_path = data_housekeeper.create_nested_dir_in_parent_dir(dir_list,upper_stages)\n",
-    "        print('dir_path: ', dir_path)\n",
+    "        parent_dir_path = data_housekeeper.create_nested_dir_in_parent_dir(dir_list,upper_stages)\n",
+    "        print('parent_dir_path: ', parent_dir_path)\n",
     "        print('dir_list: ', dir_list)\n",
-    "        nested_path = '/' + '/'.join(dir_list) +'/'\n",
-    "        print('nested_path: ', nested_path)\n",
-    "        file_path = dir_path + nested_path+ file_name\n",
+    "        file_path = parent_dir_path + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
     "        print('file path: ', file_path)\n",
     "        with open(file_path, 'w') as json_file:\n",
     "            json.dump(dictionary_list, json_file, indent=4)\n",
     "\n",
     "    @staticmethod\n",
     "    def load_json_to_list(dir_list, file_name):\n",
-    "        dir_path = data_housekeeper.create_my_path(dir_list)\n",
-    "        print(dir_path)\n",
-    "        file_path = dir_path + '/' +file_name\n",
-    "        print(file_path)\n",
-    "        with open(file_path) as json_file:\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
+    "        print(relative_file_path_)\n",
+    "        with open(relative_file_path_) as json_file:\n",
     "            data = json.load(json_file)\n",
-    "        return data"
+    "        return data\n",
+    "\n",
+    "def instance_class():\n",
+    "    myHousekeeper = data_housekeeper()\n",
+    "    return myHousekeeper"
    ]
   },
   {
@@ -128,20 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Config parameters to save\n",
     "dir_list = ['Data', 'Tickers']\n",
     "upper_stages = 0\n",
-    "file_name = 'tickers.json'\n",
+    "file_name = 'tickers_test.json'\n",
     "dictionary_list = [{'key11':'value11', 'key12':'value12','key13':{'subkey131':'subvalue131'} }, {'key21':'value21', 'key22':'value22','key23':{'subkey231':'subvalue231'}}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,10 +158,11 @@
      "output_type": "stream",
      "text": [
       "Root dir:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
-      "dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
+      "Creating dir:  ./Data./Tickers\n",
+      "parent_dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
       "dir_list:  ['Data', 'Tickers']\n",
-      "nested_path:  /Data/Tickers/\n",
-      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/Tickers/tickers.json\n"
+      "nested_dir_path:  /Data/Tickers\n",
+      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/Tickers/tickers_test.json\n"
      ]
     }
    ],
@@ -162,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./Data/Tickers\n",
-      "./Data/Tickers/tickers.json\n"
+      "nested_dir_path:  /Data/Tickers\n",
+      "./Data/Tickers/tickers_test.json\n"
      ]
     },
     {
@@ -184,7 +194,7 @@
        "  'key23': {'subkey231': 'subvalue231'}}]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,22 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'./Data/Tickers'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data_housekeeper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-21df3358cee3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmyPath\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mdata_housekeeper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_nested_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Data'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Tickers'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmyPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_housekeeper' is not defined"
+     ]
     }
    ],
    "source": [
-    "myPath =data_housekeeper.create_my_path(['Data', 'Tickers'])\n",
+    "myPath =data_housekeeper.create_nested_path(['Data', 'Tickers'])\n",
     "myPath"
    ]
   },
