timestamp added in get_tickers_from_url

--- a/Appdatabase project/01_Get_tickers_from_url.ipynb
+++ b/Appdatabase project/01_Get_tickers_from_url.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,7 @@
     "        wikitable_dict['market'] = wiki_metadata['market']\n",
     "        wikitable_dict['active_type'] = 'stock'\n",
     "        wikitable_dict['active_flag'] = True\n",
+    "        wikitable_dict['timestamp'] = date.today()\n",
     "        wikitable_data.append(wikitable_dict)\n",
     "    wikitable_data.append({'ticker':wiki_metadata['market'] ,'market':wiki_metadata['market'], 'active_type':'ETF'})\n",
     "    return wikitable_data"
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,8 @@
        "  'ISIN': 'ES0125220311',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ACX',\n",
        "  'company': 'Acerinox',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
@@ -124,7 +126,8 @@
        "  'ISIN': 'ES0132105018',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ACS',\n",
        "  'company': 'Grupo ACS',\n",
        "  'sector': 'Construcción',\n",
@@ -132,7 +135,8 @@
        "  'ISIN': 'ES0167050915',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'AENA',\n",
        "  'company': 'Aena',\n",
        "  'sector': 'Transporte y distribución',\n",
@@ -140,7 +144,8 @@
        "  'ISIN': 'ES0105046009',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ALM',\n",
        "  'company': 'Almirall',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
@@ -148,7 +153,8 @@
        "  'ISIN': 'ES0157097017',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'AMS',\n",
        "  'company': 'Amadeus IT Group',\n",
        "  'sector': 'Electrónica y software',\n",
@@ -156,7 +162,8 @@
        "  'ISIN': 'ES0109067019',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'MTS',\n",
        "  'company': 'ArcelorMittal',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
@@ -164,7 +171,8 @@
        "  'ISIN': 'LU1598757687',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'SAB',\n",
        "  'company': 'Banco Sabadell',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -172,7 +180,8 @@
        "  'ISIN': 'ES0113860A34',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'SAN',\n",
        "  'company': 'Banco Santander',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -180,7 +189,8 @@
        "  'ISIN': 'ES0113900J37',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'BKIA',\n",
        "  'company': 'Bankia',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -188,7 +198,8 @@
        "  'ISIN': 'ES0113307062',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'BKT',\n",
        "  'company': 'Bankinter',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -196,7 +207,8 @@
        "  'ISIN': 'ES0113679I37',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'BBVA',\n",
        "  'company': 'BBVA',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -204,7 +216,8 @@
        "  'ISIN': 'ES0113211835',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'CABK',\n",
        "  'company': 'CaixaBank',\n",
        "  'sector': 'Bancos y cajas de ahorro',\n",
@@ -212,7 +225,8 @@
        "  'ISIN': 'ES0140609019',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'CLNX',\n",
        "  'company': 'Cellnex Telecom',\n",
        "  'sector': 'Telecomunicaciones y otros',\n",
@@ -220,7 +234,8 @@
        "  'ISIN': 'ES0105066007',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'CIE',\n",
        "  'company': 'CIE Automotive',\n",
        "  'sector': 'Mineral, metales y transformación',\n",
@@ -228,7 +243,8 @@
        "  'ISIN': 'ES0105630315',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ENG',\n",
        "  'company': 'Enagás',\n",
        "  'sector': 'Electricidad y gas',\n",
@@ -236,7 +252,8 @@
        "  'ISIN': 'ES0130960018',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ELE',\n",
        "  'company': 'Endesa',\n",
        "  'sector': 'Electricidad y gas',\n",
@@ -244,7 +261,8 @@
        "  'ISIN': 'ES0130670112',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'FER',\n",
        "  'company': 'Ferrovial',\n",
        "  'sector': 'Construcción',\n",
@@ -252,7 +270,8 @@
        "  'ISIN': 'ES0118900010',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'GRF',\n",
        "  'company': 'Grifols',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
@@ -260,7 +279,8 @@
        "  'ISIN': 'ES0171996087',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'IAG',\n",
        "  'company': 'IAG',\n",
        "  'sector': 'Transporte y distribución',\n",
@@ -268,7 +288,8 @@
        "  'ISIN': 'ES0177542018',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'IBE',\n",
        "  'company': 'Iberdrola',\n",
        "  'sector': 'Electricidad y gas',\n",
@@ -276,7 +297,8 @@
        "  'ISIN': 'ES0144580Y14',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'ITX',\n",
        "  'company': 'Inditex',\n",
        "  'sector': 'Textil, vestido y calzado',\n",
@@ -284,7 +306,8 @@
        "  'ISIN': 'ES0148396007',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'IDR',\n",
        "  'company': 'Indra Sistemas',\n",
        "  'sector': 'Electrónica y software',\n",
@@ -292,7 +315,8 @@
        "  'ISIN': 'ES0118594417',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'COL',\n",
        "  'company': 'Inmobiliaria Colonial',\n",
        "  'sector': 'SOCIMI',\n",
@@ -300,7 +324,8 @@
        "  'ISIN': 'ES0139140174',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'MAP',\n",
        "  'company': 'Mapfre',\n",
        "  'sector': 'Seguros',\n",
@@ -308,7 +333,8 @@
        "  'ISIN': 'ES0124244E34',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'MEL',\n",
        "  'company': 'Meliá Hotels International',\n",
        "  'sector': 'Ocio, turismo y hostelería',\n",
@@ -316,7 +342,8 @@
        "  'ISIN': 'ES0176252718',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'MRL',\n",
        "  'company': 'Merlin Properties',\n",
        "  'sector': 'SOCIMI',\n",
@@ -324,7 +351,8 @@
        "  'ISIN': 'ES0105025003',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'NTGY',\n",
        "  'company': 'Naturgy',\n",
        "  'sector': 'Electricidad y gas',\n",
@@ -332,7 +360,8 @@
        "  'ISIN': 'ES0116870314',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'PHM',\n",
        "  'company': 'PharmaMar',\n",
        "  'sector': 'Productos farmacéuticos y biotecnología',\n",
@@ -340,7 +369,8 @@
        "  'ISIN': 'ES0169501022',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'REE',\n",
        "  'company': 'Red Eléctrica Corporación',\n",
        "  'sector': 'Electricidad y gas',\n",
@@ -348,7 +378,8 @@
        "  'ISIN': 'ES0173093024',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'REP',\n",
        "  'company': 'Repsol',\n",
        "  'sector': 'Petróleo',\n",
@@ -356,7 +387,8 @@
        "  'ISIN': 'ES0173516115',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'SGRE',\n",
        "  'company': 'Siemens Gamesa Renewable Energy',\n",
        "  'sector': 'Fabricación y montaje de bienes de equipo',\n",
@@ -364,7 +396,8 @@
        "  'ISIN': 'ES0143416115',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'SLR',\n",
        "  'company': 'Solaria Energía y Medio Ambiente',\n",
        "  'sector': 'Energías renovables',\n",
@@ -372,7 +405,8 @@
        "  'ISIN': 'ES0165386014',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'TEF',\n",
        "  'company': 'Telefónica',\n",
        "  'sector': 'Telecomunicaciones y otros',\n",
@@ -380,7 +414,8 @@
        "  'ISIN': 'ES0178430E18',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'VIS',\n",
        "  'company': 'Viscofan',\n",
        "  'sector': 'Alimentación y bebidas',\n",
@@ -388,11 +423,12 @@
        "  'ISIN': 'ES0184262212',\n",
        "  'market': 'IBEX35',\n",
        "  'active_type': 'stock',\n",
-       "  'Active': True},\n",
+       "  'active_flag': True,\n",
+       "  'timestamp': datetime.date(2021, 2, 11)},\n",
        " {'ticker': 'IBEX35', 'market': 'IBEX35', 'active_type': 'ETF'}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
